examples/neg/effekt_implemented_extern.effekt
extern io def test(): Unit = default { () }

extern pure def foo(): Unit =
  js { test() }
  default { () }

def main() = { foo() }